// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBadge is disabled 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-disabled-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with href and rel provided 1`] = `
<span
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-euiTestCss"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <a
      aria-label="aria-label"
      class="euiBadge__childButton emotion-euiBadge__childButton"
      data-test-subj="test subject string"
      href="/#/"
      rel="noopener noreferrer"
    >
      Content
    </a>
  </span>
</span>
`;

exports[`EuiBadge is rendered with href provided 1`] = `
<a
  aria-label="aria-label"
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-clickable-euiTestCss"
  data-test-subj="test subject string"
  href="/#/"
  rel="noreferrer"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text-clickable"
    >
      Content
    </span>
  </span>
</a>
`;

exports[`EuiBadge is rendered with iconOnClick and href provided 1`] = `
<span
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-euiTestCss"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <a
      aria-label="aria-label"
      class="euiBadge__childButton emotion-euiBadge__childButton"
      data-test-subj="test subject string"
      href="/#/"
      rel="noreferrer"
    >
      Content
    </a>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick and onClick provided 1`] = `
<span
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-euiTestCss"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <button
      aria-label="aria-label"
      class="euiBadge__childButton emotion-euiBadge__childButton"
      data-test-subj="test subject string"
    >
      Content
    </button>
  </span>
</span>
`;

exports[`EuiBadge is rendered with iconOnClick provided 1`] = `
<span
  aria-label="aria-label"
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge is rendered with onClick provided 1`] = `
<button
  aria-label="aria-label"
  class="euiBadge testClass1 testClass2 emotion-euiBadge-default-clickable-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text-clickable"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiBadge props color accent is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-accent"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color accepts hex 1`] = `
<span
  class="euiBadge emotion-euiBadge"
  style="background-color:#333;color:#FFF"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color accepts rgba 1`] = `
<span
  class="euiBadge emotion-euiBadge"
  style="background-color:rgba(255,255,255,1);color:#000"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color danger is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-danger"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color default is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color hollow is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-hollow"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color primary is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-primary"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color success is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-success"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props color warning is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-warning"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props iconSide left is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__icon emotion-euiBadge__icon-left"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props iconSide right is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
    <span
      class="euiBadge__icon emotion-euiBadge__icon-right"
      color="inherit"
      data-euiicon-type="user"
    />
  </span>
</span>
`;

exports[`EuiBadge props iconType is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__icon emotion-euiBadge__icon-left"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with accent 1`] = `
<span
  class="euiBadge emotion-euiBadge-accent"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with danger 1`] = `
<span
  class="euiBadge emotion-euiBadge-danger"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with default 1`] = `
<span
  class="euiBadge emotion-euiBadge-default"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with hollow 1`] = `
<span
  class="euiBadge emotion-euiBadge-hollow"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with hollow 2`] = `
<span
  class="euiBadge emotion-euiBadge-hollow"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with primary 1`] = `
<span
  class="euiBadge emotion-euiBadge-primary"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with success 1`] = `
<span
  class="euiBadge emotion-euiBadge-success"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;

exports[`EuiBadge props style is rendered with warning 1`] = `
<span
  class="euiBadge emotion-euiBadge-warning"
  style="border:4px solid tomato"
>
  <span
    class="euiBadge__content emotion-euiBadge__content"
  >
    <span
      class="euiBadge__text emotion-euiBadge__text"
    >
      Content
    </span>
  </span>
</span>
`;
